<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/nCIV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/new_card_icon_desc"
            android:src="@drawable/new_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nCTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_the_card_info"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nCIV1" />

        <TextView
            android:id="@+id/nCTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/card_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nCTV1" />

        <EditText
            android:id="@+id/newCardNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:hint="@string/enter_card_name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/nCTV2"
            app:layout_constraintTop_toBottomOf="@+id/nCTV2"
            android:autofillHints="" />

        <TextView
            android:id="@+id/nCTV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/card_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/newCardNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/newCardNameEditText" />

        <EditText
            android:id="@+id/newCardNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:hint="@string/card_number_hint"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/nCTV3"
            app:layout_constraintTop_toBottomOf="@+id/nCTV3"
            android:autofillHints="" />

        <TextView
            android:id="@+id/nCTV4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/card_balance"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/newCardNumberEditText"
            app:layout_constraintTop_toBottomOf="@+id/newCardNumberEditText" />

        <EditText
            android:id="@+id/newCardNumberEditText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:hint="@string/card_balance_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/nCTV4"
            app:layout_constraintTop_toBottomOf="@+id/nCTV4"
            android:autofillHints="" />

        <TextView
            android:id="@+id/nCTV5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/card_currency"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/newCardNumberEditText2"
            app:layout_constraintTop_toBottomOf="@+id/newCardNumberEditText2" />

        <Spinner
            android:id="@+id/newCardCurrencySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/currency_list"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/nCTV5"
            app:layout_constraintTop_toBottomOf="@+id/nCTV5"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/newCardSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#4D61D3"
            android:text="@string/save_new_card_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>